TS-2185 fix: Fix GoCollapse body word-break style (#167)

--- a/src/styles/gommette/components/_go-collapse.scss
+++ b/src/styles/gommette/components/_go-collapse.scss
@@ -11,7 +11,7 @@
     min-width: 0;
     h5 {
       line-height: normal;
-      word-break: break-all;
+      word-break: break-word;
       margin: 0;
     }
   }
@@ -58,7 +58,7 @@
     border: 1px solid #dee2e4;
     border-top: 0px;
     border-radius: 0 0 3px 3px;
-    word-break: break-all;
+    word-break: break-word;
   }
 
   .go-body__container {
